# Deep-Learning-Object-Detection

./: .gitignore  README.md  pyproject.toml  tests.txt
src/dlcv/: config.py  dataset.py  train.py  training.py  utils.py
src/dlcv/configs/: config_first.yaml  config_second.yaml  default_config.yaml
