[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "dlcv"
version = "0.0.5"
authors = [
  { name="Haaroon Afroz Ognawala", email="haaroon.afroz.ognawala@uni-weimar.de" },
]
description = "Individual Final Project- DLCV"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pytest", "torch", "tqdm", "matplotlib", "torchvision", "scikit-learn", "seaborn", "yacs", "pyyaml", "pycocotools"
]